<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cs.ualberta.cmput402</groupId>
    <artifactId>TicTacToe</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.0.1</version>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.4.10</version>
                <configuration>
                    <targetClasses>
                        <param>cs.ualberta.cmput402.tictactoe.board*</param>
                    </targetClasses>
                    <targetTests>
                        <param>cs.ualberta.cmput402.tictactoe.board*</param>
                    </targetTests>
                </configuration>
            </plugin>
            <plugin>
                <!-- This plugin will set properties values using dependency information -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <fork>true</fork>
                     <release>13</release>
                    <compilerArguments>
                        <Xmaxerrs>10000</Xmaxerrs>
                        <Xmaxwarns>10000</Xmaxwarns>
                    </compilerArguments>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.checkerframework</groupId>
                            <artifactId>checker</artifactId>
                            <version>3.0.1</version>
                        </path>
                    </annotationProcessorPaths>
                    <!--<annotationProcessors>-->
                        <!--&lt;!&ndash; Add all the checkers you want to enable here &ndash;&gt;-->
                        <!--&lt;!&ndash;<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>&ndash;&gt;-->
                    <!--</annotationProcessors>-->
                    <compilerArgs>
                        <!-- If using JDK 11, remove the two arguments above, remove the
                             space in the one below, and uncomment it. -->
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>

                        <!-- Optionally, -Awarns turns type-checking errors into warnings. -->
                        <!-- <arg>-Awarns</arg> -->
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    
</project>
